Created a simple file type autodetector.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,4 @@ endif()
 include(GNUInstallDirs)
 set(LIBDIR $CMAKE_INSTALL_LIBDIR)
 
-add_executable(scanner Scanner.cc scannermain.cc)
+add_executable(scanner Scanner.cc FileTypeDetector.cc scannermain.cc)
