Created a test app to watch for mounted files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,4 @@ include(GNUInstallDirs)
 set(LIBDIR $CMAKE_INSTALL_LIBDIR)
 
 add_executable(scanner Scanner.cc FileTypeDetector.cc scannermain.cc)
+add_executable(watcher watchertest.cc)
