--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ endif()
 option(full_warnings "All possible compiler warnings." OFF)
 
 include(FindPkgConfig)
+pkg_search_module(GST gstreamer-1.0 REQUIRED)
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -pedantic -Wextra")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -std=c++0x")
@@ -19,5 +20,11 @@ endif()
 include(GNUInstallDirs)
 set(LIBDIR $CMAKE_INSTALL_LIBDIR)
 
+message(STATUS ${GST_CFLAGS})
+
 add_executable(scanner Scanner.cc FileTypeDetector.cc MediaFile.cc MediaStore.cc scannermain.cc)
 add_executable(watcher watchertest.cc)
+
+add_definitions(${GST_CFLAGS})
+add_executable(metadataextractor metadataextractor.cc)
+target_link_libraries(metadataextractor ${GST_LDFLAGS})
