Started on subtree change watcher.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ message(STATUS ${GST_CFLAGS})
 
 add_executable(scanner Scanner.cc FileTypeDetector.cc MediaFile.cc MediaStore.cc scannermain.cc)
 add_executable(watcher watchertest.cc)
+add_executable(subtreewatcher subtreewatcher.cc)
 
 add_definitions(${GST_CFLAGS})
 add_executable(metadataextractor metadataextractor.cc)
