Moved subtreewatcher to a class file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,11 +20,9 @@ endif()
 include(GNUInstallDirs)
 set(LIBDIR $CMAKE_INSTALL_LIBDIR)
 
-message(STATUS ${GST_CFLAGS})
-
 add_executable(scanner Scanner.cc FileTypeDetector.cc MediaFile.cc MediaStore.cc scannermain.cc)
 add_executable(watcher watchertest.cc)
-add_executable(subtreewatcher subtreewatcher.cc)
+add_executable(subtreewatcher subtreewatcher.cc SubtreeWatcher.cc)
 
 add_definitions(${GST_CFLAGS})
 add_executable(metadataextractor metadataextractor.cc)
