Scope experiment starts now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ option(full_warnings "All possible compiler warnings." OFF)
 include(FindPkgConfig)
 pkg_search_module(GST gstreamer-1.0 REQUIRED)
 pkg_search_module(SQLITE sqlite3 REQUIRED)
+pkg_search_module(UNITY unity REQUIRED)
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -pedantic -Wextra")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -std=c++0x")
@@ -33,3 +34,7 @@ target_link_libraries(scannerdemo ${GST_LDFLAGS} ${SQLITE_LDFLAGS})
 #target_link_libraries(metadataextractor ${GST_LDFLAGS})
 add_executable(query query.cpp)
 target_link_libraries(query ${SQLITE_LDFLAGS})
+
+include_directories(${UNITY_INCLUDE_DIRS})
+add_executable(scanscope scanscope.cpp)
+target_link_libraries(scanscope ${UNITY_LDFLAGS})
