--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,12 +27,12 @@ add_executable(watcher watchertest.cc)
 
 add_definitions(${GST_CFLAGS})
 add_executable(scannerdaemon scannerdaemon.cc SubtreeWatcher.cc MediaFile.cc MediaStore.cc
-FileTypeDetector.cc metadataextractor.cc Scanner.cc)
+FileTypeDetector.cc metadataextractor.cc Scanner.cc utils.cc)
 target_link_libraries(scannerdaemon ${GST_LDFLAGS} ${SQLITE_LDFLAGS})
 
 #add_executable(metadataextractor metadataextractor.cc)
 #target_link_libraries(metadataextractor ${GST_LDFLAGS})
-add_executable(query query.cpp)
+add_executable(query query.cpp utils.cc)
 target_link_libraries(query ${SQLITE_LDFLAGS})
 
 include_directories(${UNITY_INCLUDE_DIRS})
