--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,12 @@ endif()
 option(full_warnings "All possible compiler warnings." OFF)
 
 include(FindPkgConfig)
-pkg_check_modules(GST gstreamer-1.0 gstreamer-pbutils-1.0 gio-2.0 REQUIRED)
+pkg_check_modules(GST gstreamer-1.0 gstreamer-pbutils-1.0 REQUIRED)
+pkg_search_module(GIO gio-2.0 REQUIRED)
 pkg_search_module(SQLITE sqlite3 REQUIRED)
 pkg_search_module(UNITY unity REQUIRED)
 
-#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -pedantic -Wextra")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -pedantic -Wextra")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -std=c++11")
 if(${full_warnings})
 # C does not have any more warning flags.
