--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,26 @@
+if (NOT DEFINED GTEST_ROOT)
+    set(GTEST_ROOT /usr/src/gtest)
+endif()
+
+set(GTEST_SRC_DIR "${GTEST_ROOT}/src")
+set(GTEST_INCLUDE_DIR ${GTEST_ROOT})
+
+add_library(gtest STATIC
+${GTEST_SRC_DIR}/gtest-all.cc
+)
+
+set_target_properties(gtest PROPERTIES INCLUDE_DIRECTORIES ${GTEST_INCLUDE_DIR})
+
+# Clang complains about unused private field 'pretty_' in gtest-internal-inl.h.
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    set_target_properties(gtest PROPERTIES COMPILE_FLAGS "-Wno-unused-private-field")
+endif()
+
 add_definitions(${GST_CFLAGS})
 include_directories(../src)
 
 add_executable(basic basic.cc)
-target_link_libraries(basic scannerstuff
+target_link_libraries(basic scannerstuff gtest ${CMAKE_THREAD_LIBS_INIT}
 ${SQLITE_LDFLAGS} ${GIO_LDFLAGS} ${GST_LDFLAGS})
 add_test(basic basic)
 set_property(TEST basic PROPERTY ENVIRONMENT "TEST_DIR=${CMAKE_CURRENT_BINARY_DIR}")
