--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,8 @@ Build-Depends: cmake,
                libglib2.0-dev,
                libgstreamer-plugins-base1.0-dev,
                libgstreamer1.0-dev,
-# For unit tests
+               libgtest-dev,
+# For running unit tests
                gstreamer1.0-plugins-base,
                gstreamer1.0-plugins-good,
 # For "old style" scope
