Add small helper class to help run sqlite statements with bound parameters.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,3 +25,7 @@ ${SQLITE_LDFLAGS} ${GIO_LDFLAGS} ${GST_LDFLAGS})
 add_test(basic basic)
 set_property(TEST basic PROPERTY ENVIRONMENT "TEST_DIR=${CMAKE_CURRENT_BINARY_DIR}")
 set_property(TEST basic APPEND PROPERTY ENVIRONMENT "SOURCE_DIR=${CMAKE_SOURCE_DIR}")
+
+add_executable(sqliteutilstest sqliteutilstest.cc)
+target_link_libraries(sqliteutilstest gtest ${SQLITE_LDFLAGS} -pthread)
+add_test(sqliteutilstest sqliteutilstest)
