Move the media scanner library code to a separate directory to try and separate out what represents the public API.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,12 +20,12 @@ add_definitions(${GST_CFLAGS})
 include_directories(../src)
 
 add_executable(basic basic.cc)
-target_link_libraries(basic scannerstuff gtest ${CMAKE_THREAD_LIBS_INIT}
-${SQLITE_LDFLAGS} ${GIO_LDFLAGS} ${GST_LDFLAGS})
+target_link_libraries(basic mediascanner2 gtest ${CMAKE_THREAD_LIBS_INIT}
+${MEDIASCANNER_LDFLAGS})
 add_test(basic basic)
 set_property(TEST basic PROPERTY ENVIRONMENT "TEST_DIR=${CMAKE_CURRENT_BINARY_DIR}")
 set_property(TEST basic APPEND PROPERTY ENVIRONMENT "SOURCE_DIR=${CMAKE_SOURCE_DIR}")
 
 add_executable(sqliteutilstest sqliteutilstest.cc)
-target_link_libraries(sqliteutilstest gtest ${CMAKE_THREAD_LIBS_INIT} ${SQLITE_LDFLAGS})
+target_link_libraries(sqliteutilstest gtest ${CMAKE_THREAD_LIBS_INIT} ${MEDIASCANNER_LDFLAGS})
 add_test(sqliteutilstest sqliteutilstest)
