--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,36 +1,25 @@
+add_subdirectory(mediascanner)
+
 add_executable(watcher watchertest.cc)
 
-add_library(scannerstuff STATIC
-  SubtreeWatcher.cc
-  MediaFile.cc
-  Album.cc
-  MediaStore.cc
-  FileTypeDetector.cc
-  MetadataExtractor.cc
-  Scanner.cc
-  utils.cc
-  ../mozilla/fts3_porter.c
-  ../mozilla/Normalize.c)
+add_definitions(${MEDIASCANNER_CFLAGS})
 
-add_definitions(${GST_CFLAGS})
-add_definitions(${GIO_CFLAGS})
 add_executable(scannerdaemon scannerdaemon.cc)
-target_link_libraries(scannerdaemon scannerstuff
-${GST_LDFLAGS} ${GIO_LDFLAGS} ${SQLITE_LDFLAGS})
+target_link_libraries(scannerdaemon mediascanner2 ${MEDIASCANNER_LDFLAGS})
 
 install(TARGETS scannerdaemon
 RUNTIME DESTINATION usr/bin
 )
 
 add_executable(query query.cc)
-target_link_libraries(query scannerstuff
-${GST_LDFLAGS} ${GIO_LDFLAGS} ${SQLITE_LDFLAGS})
+target_link_libraries(query mediascanner2
+${MEDIASCANNER_LDFLAGS})
 
 include_directories(${UNITY_INCLUDE_DIRS})
 add_executable(scanscope scanscope.cc)
 target_link_libraries(scanscope
-${SQLITE_LDFLAGS} ${GIO_LDFLAGS} ${UNITY_LDFLAGS})
+${MEDIASCANNER_LDFLAGS} ${UNITY_LDFLAGS})
 
 add_executable(scaletest scaletest.cc)
-target_link_libraries(scaletest scannerstuff
-${SQLITE_LDFLAGS} ${GIO_LDFLAGS} ${GST_LDFLAGS})
+target_link_libraries(scaletest mediascanner2
+${MEDIASCANNER_LDFLAGS})
