--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,12 +16,12 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     set_target_properties(gtest PROPERTIES COMPILE_FLAGS "-Wno-unused-private-field")
 endif()
 
-add_definitions(${GST_CFLAGS})
+add_definitions(${MEDIASCANNER_CFLAGS} ${GST_CFLAGS})
 include_directories(../src)
 
 add_executable(basic basic.cc)
 target_link_libraries(basic mediascanner2 gtest ${CMAKE_THREAD_LIBS_INIT}
-${MEDIASCANNER_LDFLAGS})
+${MEDIASCANNER_LDFLAGS} ${GST_LDFLAGS})
 add_test(basic basic)
 set_property(TEST basic PROPERTY ENVIRONMENT "TEST_DIR=${CMAKE_CURRENT_BINARY_DIR}")
 set_property(TEST basic APPEND PROPERTY ENVIRONMENT "SOURCE_DIR=${CMAKE_SOURCE_DIR}")
