Move files related to actual scanning to src/daemon, so src/mediascanner only deals with metadata storage and retrieval: scanning and extraction is the responsibility of the daemon.

--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -1,11 +1,23 @@
 add_definitions(${MEDIASCANNER_CFLAGS} ${GST_CFLAGS})
 include_directories(..)
 
+add_library(scannerstuff STATIC
+  FileTypeDetector.cc
+  MetadataExtractor.cc
+  SubtreeWatcher.cc
+  Scanner.cc
+)
+
 add_executable(scannerdaemon
   scannerdaemon.cc
-  )
+)
 
-target_link_libraries(scannerdaemon mediascanner2 ${MEDIASCANNER_LDFLAGS} ${GST_LDFLAGS})
+target_link_libraries(scannerdaemon
+  mediascanner2
+  scannerstuff
+  ${MEDIASCANNER_LDFLAGS}
+  ${GST_LDFLAGS}
+)
 
 install(TARGETS scannerdaemon
 RUNTIME DESTINATION usr/bin
