--- a/src/mediascanner/CMakeLists.txt
+++ b/src/mediascanner/CMakeLists.txt
@@ -2,12 +2,8 @@ add_library(mediascanner2 STATIC
   MediaFile.cc
   Album.cc
   MediaStore.cc
-  FileTypeDetector.cc
-  MetadataExtractor.cc
-  SubtreeWatcher.cc
-  Scanner.cc
   utils.cc
   mozilla/fts3_porter.c
   mozilla/Normalize.c)
 
-add_definitions(${MEDIASCANNER_CFLAGS} ${GST_CFLAGS})
+add_definitions(${MEDIASCANNER_CFLAGS})
