--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(daemon)
 
 add_executable(watcher watchertest.cc)
 
-add_definitions(${MEDIASCANNER_CFLAGS} ${GST_CFLAGS})
+add_definitions(${MEDIASCANNER_CFLAGS})
 
 add_executable(query query.cc)
 target_link_libraries(query mediascanner2
