--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,9 +1,7 @@
-add_subdirectory(mediascanner)
-add_subdirectory(daemon)
+add_definitions(${MEDIASCANNER_CFLAGS})
+include_directories(..)
 
 add_executable(watcher watchertest.cc)
-
-add_definitions(${MEDIASCANNER_CFLAGS})
 
 add_executable(query query.cc)
 target_link_libraries(query mediascanner2
