install daemon to CMAKE_INSTALL_BINDIR

--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -19,6 +19,7 @@ target_link_libraries(scannerdaemon
   ${GST_LDFLAGS}
 )
 
-install(TARGETS scannerdaemon
-RUNTIME DESTINATION usr/bin
+install(
+  TARGETS scannerdaemon
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
