--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(..)
 add_executable(watcher watchertest.cc)
 
 add_executable(query query.cc)
-target_link_libraries(query mediascanner2
+target_link_libraries(query mediascanner
 ${MEDIASCANNER_LDFLAGS})
 
 include_directories(${UNITY_INCLUDE_DIRS})
@@ -13,5 +13,5 @@ target_link_libraries(scanscope
 ${MEDIASCANNER_LDFLAGS} ${UNITY_LDFLAGS})
 
 add_executable(scaletest scaletest.cc)
-target_link_libraries(scaletest mediascanner2
+target_link_libraries(scaletest mediascanner
 ${MEDIASCANNER_LDFLAGS})
