Move test data to test/media/

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,7 +21,7 @@ add_definitions(${MEDIASCANNER_CFLAGS} ${GST_CFLAGS})
 include_directories(../src)
 
 add_definitions(-DTEST_DIR="${CMAKE_CURRENT_BINARY_DIR}")
-add_definitions(-DSOURCE_DIR="${CMAKE_SOURCE_DIR}")
+add_definitions(-DSOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_executable(basic basic.cc)
 target_link_libraries(basic mediascanner scannerstuff gtest)
