Run the test suite in series, and always include the test output in the build log.

--- a/debian/rules
+++ b/debian/rules
@@ -11,3 +11,6 @@ export CCACHE_SLOPPINESS=time_macros
 
 %:
 	dh $@ --parallel --fail-missing
+
+override_dh_auto_test:
+	dh_auto_test --max-parallel=1 -- ARGS="--verbose"
