Use automoc for mediascanner-qml target.

--- a/src/qml/CMakeLists.txt
+++ b/src/qml/CMakeLists.txt
@@ -4,14 +4,9 @@ add_library(mediascanner-qml MODULE
   plugin.cc
   MediaFileWrapper.cc
   MediaStoreWrapper.cc
-  moc_MediaFileWrapper.cc
-  moc_MediaStoreWrapper.cc
-  moc_plugin.cc
 )
-qt5_generate_moc(MediaFileWrapper.hh moc_MediaFileWrapper.cc)
-qt5_generate_moc(MediaStoreWrapper.hh moc_MediaStoreWrapper.cc)
-qt5_generate_moc(plugin.hh moc_plugin.cc)
 
+set_target_properties(mediascanner-qml PROPERTIES AUTOMOC TRUE)
 qt5_use_modules(mediascanner-qml Qml)
 target_link_libraries(mediascanner-qml mediascanner)
 
