--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,10 @@ Build-Depends: cmake,
                libgstreamer1.0-dev,
                libgtest-dev,
                libsqlite3-dev,
+               qt5-default,
+               qtbase5-dev,
+               qtbase5-dev-tools,
+               qtdeclarative5-dev-tools,
 # For running unit tests
                gstreamer1.0-plugins-base,
                gstreamer1.0-plugins-good,
@@ -51,3 +55,13 @@ Depends: libmediascanner-2.0-0 (= ${binary:Version}),
 Description: Development files for libmediascanner
  This package provides the infrastructure for using the media scanner's
  access library in C++ based projects.
+
+Package: qtdeclarative5-mediascanner-plugin
+Architecture: any
+Pre-Depends: ${misc:Pre-Depends},
+Depends: mediascanner (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends},
+Description: QML plugin for the Ubuntu Media Scanner
+ This package provides components that allow access to the media
+ scanner index from Qt Quick 2 / QML applications.
