--- a/src/qml/CMakeLists.txt
+++ b/src/qml/CMakeLists.txt
@@ -10,12 +10,14 @@ set_target_properties(mediascanner-qml PROPERTIES AUTOMOC TRUE)
 qt5_use_modules(mediascanner-qml Qml)
 target_link_libraries(mediascanner-qml mediascanner)
 
+set(QML_PLUGIN_DIR "${CMAKE_INSTALL_LIBDIR}/qt5/qml/Ubuntu/MediaScanner.0.1")
+
 install(
   TARGETS mediascanner-qml
-  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}/qt5/qml/Ubuntu/MediaScanner"
+  LIBRARY DESTINATION ${QML_PLUGIN_DIR}
 )
 
 install(
   FILES qmldir
-  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}/qt5/qml/Ubuntu/MediaScanner"
+  DESTINATION ${QML_PLUGIN_DIR}
 )
