--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Build-Depends: cmake,
                qtbase5-dev-tools,
                qtdeclarative5-dev,
                qtdeclarative5-dev-tools,
+               qtdeclarative5-qtquick2-plugin,
 # For running unit tests
                gstreamer1.0-plugins-base,
                gstreamer1.0-plugins-good,
