Grabbed invalidation code from old branch.

--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -2,10 +2,12 @@ add_definitions(${MEDIASCANNER_CFLAGS} ${GST_CFLAGS})
 include_directories(..)
 
 add_library(scannerstuff STATIC
+  InvalidationSender.cc
   MetadataExtractor.cc
   SubtreeWatcher.cc
   Scanner.cc
 )
+
 target_link_libraries(scannerstuff ${GST_LIBRARIES})
 
 add_executable(scannerdaemon
