Install MediaFileBuilder's header file.

--- a/src/mediascanner/CMakeLists.txt
+++ b/src/mediascanner/CMakeLists.txt
@@ -25,6 +25,7 @@ install(
 install(FILES
   Album.hh
   MediaFile.hh
+  MediaFileBuilder.hh
   MediaStore.hh
   scannercore.hh
   DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/mediascanner-2.0/mediascanner"
