Add an abstract list model for searching for songs.

--- a/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
+++ b/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
@@ -6,6 +6,8 @@ add_library(mediascanner-qml MODULE
   plugin.cc
   MediaFileWrapper.cc
   MediaStoreWrapper.cc
+  MediaFileModelBase.cc
+  SongsSearchModel.cc
 )
 
 set_target_properties(mediascanner-qml PROPERTIES AUTOMOC TRUE)
