Add base class for album models.

--- a/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
+++ b/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(mediascanner-qml MODULE
   MediaFileWrapper.cc
   MediaStoreWrapper.cc
   MediaFileModelBase.cc
+  AlbumModelBase.cc
   SongsSearchModel.cc
 )
 
