--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -47,3 +47,5 @@ add_executable(test_qml test_qml.cc)
 qt5_use_modules(test_qml QuickTest)
 target_link_libraries(test_qml mediascanner)
 add_test(test_qml test_qml -input ${CMAKE_CURRENT_SOURCE_DIR}/qml -import ${CMAKE_BINARY_DIR}/src/qml)
+set_tests_properties(test_qml
+  PROPERTIES ENVIRONMENT "QT_QPA_PLATFORM=minimal")
