Add album list model.

--- a/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
+++ b/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(mediascanner-qml MODULE
   MediaStoreWrapper.cc
   MediaFileModelBase.cc
   AlbumModelBase.cc
+  AlbumsModel.cc
   SongsModel.cc
   SongsSearchModel.cc
 )
