Add artists model.

--- a/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
+++ b/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(mediascanner-qml MODULE
   MediaFileModelBase.cc
   AlbumModelBase.cc
   AlbumsModel.cc
+  ArtistsModel.cc
   SongsModel.cc
   SongsSearchModel.cc
 )
