--- a/src/daemon/CMakeLists.txt
+++ b/src/daemon/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(scannerstuff STATIC
   MetadataExtractor.cc
   SubtreeWatcher.cc
   Scanner.cc
+  util.cc
 )
 
 target_link_libraries(scannerstuff ${GST_LIBRARIES})
