--- a/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
+++ b/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
@@ -4,6 +4,7 @@ set(QML_PLUGIN_DIR "${CMAKE_INSTALL_LIBDIR}/qt5/qml/Ubuntu/MediaScanner.0.1")
 
 add_library(mediascanner-qml MODULE
   plugin.cc
+  utils.cc
   MediaFileWrapper.cc
   MediaStoreWrapper.cc
   MediaFileModelBase.cc
