--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -10,3 +10,7 @@ ${MEDIASCANNER_LDFLAGS})
 add_executable(scaletest scaletest.cc)
 target_link_libraries(scaletest mediascanner
 ${MEDIASCANNER_LDFLAGS})
+
+include_directories(${EXIF_INCLUDE_DIRS})
+add_executable(imagetest imagetest.cc)
+target_link_libraries(imagetest ${EXIF_LDFLAGS})
