Make QML tests run against D-Bus service.

--- a/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
+++ b/src/qml/Ubuntu/MediaScanner/CMakeLists.txt
@@ -18,7 +18,7 @@ add_library(mediascanner-qml MODULE
 
 set_target_properties(mediascanner-qml PROPERTIES AUTOMOC TRUE)
 qt5_use_modules(mediascanner-qml Qml)
-target_link_libraries(mediascanner-qml mediascanner)
+target_link_libraries(mediascanner-qml mediascanner ms-dbus)
 
 install(
   TARGETS mediascanner-qml
