Install dbus service along with activation config file.

--- a/src/ms-dbus/CMakeLists.txt
+++ b/src/ms-dbus/CMakeLists.txt
@@ -16,3 +16,17 @@ add_executable(mediascanner-dbus
 target_link_libraries(mediascanner-dbus ms-dbus)
 set_target_properties(mediascanner-dbus
   PROPERTIES OUTPUT_NAME "mediascanner-dbus-2.0")
+
+install(
+  TARGETS mediascanner-dbus
+  RUNTIME DESTINATION ${CMAKE_INSTALL_LIBDIR}/mediascanner-2.0
+)
+
+configure_file(
+  com.canonical.MediaScanner2.service.in
+  com.canonical.MediaScanner2.service)
+
+install(
+  FILES ${CMAKE_CURRENT_BINARY_DIR}/com.canonical.MediaScanner2.service
+  DESTINATION ${CMAKE_INSTALL_DATADIR}/dbus-1/services
+)
