--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Standards-Version: 3.9.5
 Build-Depends: cmake,
                dbus,
                debhelper (>= 9),
+               libdbus-1-dev,
                libdbus-cpp-dev (>= 3.0.0),
                libglib2.0-dev,
                libgstreamer-plugins-base1.0-dev,
